--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,15 @@
         android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.SpeciesDetectionAndroid">
-        <activity android:name=".ui.notif.NotificationActivity"></activity>
+        <activity
+            android:name=".ui.home.WeatherActivity"
+            android:label="@string/weather" />
+        <activity
+            android:name=".ui.home.CompassActivity"
+            android:label="@string/compass" />
+        <activity
+            android:name=".ui.notif.NotificationActivity"
+            android:label="@string/notification" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
