day 2 session complete

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,6 @@ dependencies {
 
 
     compile 'cc.cloudist.acplibrary:library:1.2.1'
+    implementation 'com.github.arbelkilani:Compass-View:v1.1.1'
 
 }
